AAP-23715 - Part 2 adding menu attributes for 2.4

--- a/downstream/modules/eda/proc-eda-set-up-new-decision-environment.adoc
+++ b/downstream/modules/eda/proc-eda-set-up-new-decision-environment.adoc
@@ -1,7 +1,7 @@
 [id="eda-set-up-new-decision-environment"]
 
 = Setting up a new decision environment
-
+// [ddacosta] I don't think there will be an EDA specific dashboard in the gateway. This might need to be changed to reflect the changes for 2.5.
 The following steps describe how to import a decision environment into your {EDAcontroller} Dashboard.
 
 .Prerequisites
