--- a/downstream/modules/eda/proc-eda-set-up-token.adoc
+++ b/downstream/modules/eda/proc-eda-set-up-token.adoc
@@ -13,7 +13,7 @@
 . Go to the {EDAcontroller} Dashboard.
 . From the top navigation panel, select your profile.
 . Go to *User details*.
-//[ddacosta] I don't see Controller Tokens in the test environment, need to verify whether this changes in 2.5
+//[ddacosta] I don't see Controller Tokens in the test environment, need to verify where this lives and whether it changes in 2.5
 . Select menu:Controller Tokens[Create controller token].
 . Insert the following:
 +
