--- a/downstream/modules/hub/proc-add-group-to-container-repo.adoc
+++ b/downstream/modules/hub/proc-add-group-to-container-repo.adoc
@@ -12,7 +12,8 @@ You can use this option to extend or restrict permissions based on what the grou
 * You have *change container namespace* permissions.
 
 .Procedure
-
+//[ddacosta] For 2.5 this will be Log in to Ansible Automation Platform and select Automation Content. Automation hub opens in a new tab. From the navigation ...
+. Log in to {HubName}.
 . From the navigation panel, select {MenuACExecEnvironments}.
 . Select your container repository.
 . From the *Access* tab, click btn:[Select a group].
