--- a/downstream/modules/hub/proc-create-api-token-pah.adoc
+++ b/downstream/modules/hub/proc-create-api-token-pah.adoc
@@ -10,8 +10,8 @@ In {PrivateHubName}, you can create an API token using API token management. The
 * Valid subscription credentials for {PlatformName}.
 
 .Procedure
-
-. Navigate to your {PrivateHubName}.
+//[ddacosta] For 2.5 this will be Log in to Ansible Automation Platform and select Automation Content. Automation hub opens in a new tab. From the navigation ...
+. Log in to your {PrivateHubName}.
 . From the navigation panel, select {MenuACAPIToken}.
 . Click btn:[Load Token].
 . To copy the API token, click the btn:[Copy to clipboard] icon.
