--- a/downstream/modules/hub/proc-create-remote.adoc
+++ b/downstream/modules/hub/proc-create-remote.adoc
@@ -8,7 +8,8 @@
 You can use {PlatformName} to create a remote configuration to an external collection source. Then, you can sync the content from those collections to your custom repositories.
 
 .Procedure
-. Log in to {PlatformName}.
+//[ddacosta] For 2.5 this will be Log in to Ansible Automation Platform and select Automation Content. Automation hub opens in a new tab. From the navigation ...
+. Log in to {HubName}.
 . From the navigation panel, select {MenuACAdminRemotes}.
 . Click btn:[Add Remote].
 . Enter a *Name* for the remote configuration.
