--- a/downstream/modules/hub/proc-create-users.adoc
+++ b/downstream/modules/hub/proc-create-users.adoc
@@ -11,6 +11,7 @@ After you create a user in {PrivateHubName}, you can give them permissions by ad
 * You have *user* permissions and can create users in {PrivateHubName}.
 
 .Procedure
+//[ddacosta] For 2.5 this will be Log in to Ansible Automation Platform and select Automation Content. Automation hub opens in a new tab. From the navigation ...
 . Log in to your {PrivateHubName}.
 . From the navigation panel, select {MenuHubUsers}.
 . Click btn:[Create user].
