--- a/downstream/modules/hub/proc-delete-collection.adoc
+++ b/downstream/modules/hub/proc-delete-collection.adoc
@@ -10,6 +10,7 @@ You can further manage your collections by deleting unwanted collections, if the
 * You have *Delete Collections* permissions.
 
 .Procedure
+//[ddacosta] For 2.5 this will be Log in to Ansible Automation Platform and select Automation Content. Automation hub opens in a new tab. From the navigation ...
 . Log in to your {PrivateHubName}.
 . From the navigation panel, select {MenuACCollections}.
 . Before deleting the collection, check to see if it has collections that are dependent on it:
