--- a/downstream/modules/hub/proc-provide-remote-access.adoc
+++ b/downstream/modules/hub/proc-provide-remote-access.adoc
@@ -8,6 +8,7 @@
 After you create a remote configuration, you must provide access to it before anyone can use it.
 
 .Procedure
+//[ddacosta] For 2.5 this will be Log in to Ansible Automation Platform and select Automation Content. Automation hub opens in a new tab. From the navigation ...
 . Log in to {PrivateHubName}.
 . From the navigation panel, select {MenuACAdminRemotes}.
 . Locate your repository in the list, click the btn:[More Actions] icon *{MoreActionsIcon}*, and select *Edit*.
