--- a/downstream/modules/platform/proc-controller-set-up-logging.adoc
+++ b/downstream/modules/platform/proc-controller-set-up-logging.adoc
@@ -6,7 +6,7 @@ Use the following procedure to set up logging to any of the aggregator types.
 
 .Procedure
 . From the navigation panel, select {MenuAEAdminSettings}.
-. Select *Logging settings* from the list of *System* options. 
+. Select *Logging settings* from the list of *System* options.
 . On the *Logging settings* screen, click btn:[Edit].
 . Set the following configurable options:
 
@@ -21,7 +21,7 @@ However, TCP and UDP connections are determined by the hostname and port number 
 Therefore, in the case of a TCP or UDP connection, supply the port in the specified field.
 If a URL is entered in the *Logging Aggregator* field instead, its hostname portion is extracted as the hostname.
 ====
-* *Logging Aggregator Type*: Click to select the aggregator service from the menu:
+* *Logging Aggregator Type*: Click to select the aggregator service from the list:
 +
 image:configure-controller-system-logging-types.png[Logging types]
 
