--- a/downstream/modules/hub/proc-adding-containers-remotely-to-the-automation-hub.adoc
+++ b/downstream/modules/hub/proc-adding-containers-remotely-to-the-automation-hub.adoc
@@ -10,8 +10,9 @@ You can add containers remotely to {HubName} in one of the following two ways:
 * Execution Environment
 
 .Procedure
+//[ddacosta] For 2.5 this will be Log in to Ansible Automation Platform and select Automation Content. Automation hub opens in a new tab. From the navigation ...
 
-. Navigate to {HubName}.
+. Log in to {HubName}.
 
 . From the navigation panel, select {MenuACAdminRemoteRegistries}.
 
