--- a/downstream/modules/hub/proc-create-namespace.adoc
+++ b/downstream/modules/hub/proc-create-namespace.adoc
@@ -10,7 +10,7 @@ When creating a namespace, you can assign a group in {HubName} as owners of that
 * You have *Add Namespaces* and *Upload to Namespaces* permissions.
 
 .Procedure
-
+//[ddacosta] For 2.5 this will be Log in to Ansible Automation Platform and select Automation Content. Automation hub opens in a new tab. From the navigation ...
 . Log in to your {PrivateHubName}.
 . From the navigation panel, select {MenuACNamespaces}.
 . Click btn:[Create] and enter a *namespace name*.
