--- a/downstream/modules/hub/proc-edit-namespace.adoc
+++ b/downstream/modules/hub/proc-edit-namespace.adoc
@@ -11,6 +11,7 @@ You can add information and provide resources for your users to accompany collec
 * You have *Change Namespaces* permissions.
 
 .Procedure
+//[ddacosta] For 2.5 this will be Log in to Ansible Automation Platform and select Automation Content. Automation hub opens in a new tab. From the navigation ...
 . Log in to your {PrivateHubName}.
 . From the navigation panel, select {MenuACNamespaces}.
 . Click the btn:[More Actions] icon *{MoreActionsIcon}* and select *Edit namespace*.
