--- a/downstream/modules/hub/proc-export-collection.adoc
+++ b/downstream/modules/hub/proc-export-collection.adoc
@@ -8,6 +8,7 @@
 After collections are finalized, you can import them to a location where they can be distributed to others across your organization.
 
 .Procedure
+//[ddacosta] For 2.5 this will be Log in to Ansible Automation Platform and select Automation Content. Automation hub opens in a new tab. From the navigation ...
 . Log in to {PrivateHubName}.
 . From the navigation panel, select {MenuACCollections}. The *Collections* page displays all collections across all repositories. You can search for a specific collection.
 . Select the collection that you want to export. The collection details page opens.
