--- a/downstream/modules/hub/proc-revert-repository-version.adoc
+++ b/downstream/modules/hub/proc-revert-repository-version.adoc
@@ -8,6 +8,7 @@
 When automation content collections are added or removed from a repository, a new version is created. If a change to your repository causes a problem, you can revert to a previous version. Reverting is a safe operation and does not delete collections from the system, but rather, changes the content associated with the repository. The number of versions saved is defined in the *Retained number of versions* setting when a xref:proc-create-repository[repository is created].
 
 .Procedure
+//[ddacosta] For 2.5 this will be Log in to Ansible Automation Platform and select Automation Content. Automation hub opens in a new tab. From the navigation ...
 . Log in to {PrivateHubName}.
 . From the navigation panel, select {MenuACAdminRepositories}.
 . Locate your repository in the list and click the btn:[More Actions] icon *{MoreActionsIcon}*, then select *Edit*.
