AAP-23715 - Part 3 minor fixes for attribute implementation

--- a/downstream/modules/platform/proc-control-data-collection.adoc
+++ b/downstream/modules/platform/proc-control-data-collection.adoc
@@ -9,7 +9,7 @@ You can control how {ControllerName} collects data by setting your participation
 
 . Log in to your {ControllerName}.
 //[ddacosta]I don't see an equivalent in 2.5, need to verify where it gets added
-. Navigate to menu:Settings[User Interface].
+. Navigate to {MenuAEAdminSettings} and select *User Interface settings* from the *User Interface* option.
 . Select the desired level of data collection from the *User Analytics Tracking State* drop-down list:
 ** *Off*: Prevents any data collection.
 ** *Anonymous*: Enables data collection without your specific user data.
