--- a/downstream/modules/platform/proc-controller-configure-jobs.adoc
+++ b/downstream/modules/platform/proc-controller-configure-jobs.adoc
@@ -7,7 +7,7 @@ The *Jobs* tab enables you to configure the types of modules that can be used by
 .Procedure
 
 . From the navigation panel, select {MenuAEAdminSettings}.
-. Select *Jobs settings* in the *Jobs* options.
+. Select *Jobs settings* in the *Jobs* option.
 Set the configurable options from the fields provided.
 Click the tooltip image:question_circle.png[Tool tip,15,15] icon next to the field that you need additional information about.
 +
