--- a/downstream/modules/platform/proc-controller-github-organization-setttings.adoc
+++ b/downstream/modules/platform/proc-controller-github-organization-setttings.adoc
@@ -16,7 +16,7 @@ Each key and secret must belong to a unique application and cannot be shared or 
 The OAuth2 key (Client ID) and secret (Client Secret) are used to supply the required fields in the UI.
 
 .Procedure
-. On the navigation panel, select {MenuAEAdminSettings}.
+. From the navigation panel, select {MenuAEAdminSettings}.
 . On the *Settings* page, select *GitHub settings* from the list of *Authentication* options.
 . Select the *GitHub Organization* tab.
 +
