--- a/downstream/modules/platform/proc-controller-github-settings.adoc
+++ b/downstream/modules/platform/proc-controller-github-settings.adoc
@@ -9,7 +9,7 @@ To register the application, you must supply it with your homepage URL, which is
 The OAuth2 key (Client ID) and secret (Client Secret) are used to supply the required fields in the UI.
 
 .Procedure
-. On the navigation panel, select {MenuAEAdminSettings}.
+. From the navigation panel, select {MenuAEAdminSettings}.
 . On the *Settings* page, select *GitHub settings* from the list of *Authentication* options.
 . Select the *GitHub Default* tab if not already selected.
 +
