--- a/downstream/assemblies/central-auth/assembly-assign-hub-admin-permissions.adoc
+++ b/downstream/assemblies/central-auth/assembly-assign-hub-admin-permissions.adoc
@@ -9,7 +9,7 @@ Hub administrative users will need to be assigned the role of _hubadmin_ in orde
 
 .Procedure
 . Navigate to the `ansible-automation-platform` realm on your SSO client.
-. From the navigation bar, select menu:Manage[Users].
+. From the navigation panel, select {MenuHubUsers}.
 . Select a user from the list by clicking their ID.
 . Click the *Role Mappings* tab.
 . Using the dropdown menu under _Client Roles_, select *automation-hub*.
