--- a/downstream/modules/platform/proc-configuring-reverse-proxy.adoc
+++ b/downstream/modules/platform/proc-configuring-reverse-proxy.adoc
@@ -12,7 +12,7 @@ You can support a reverse proxy server configuration by adding `HTTP_X_FORWARDED
 
 .Procedure
 //[ddacosta] Need to verify that in 2.5 this is Settings[System]...
-. On your {ControllerName}, navigate to menu:Settings[Miscellaneous System settings].
+. On your {ControllerName}, navigate to {MenuAEAdminSettings}Settings and select *Miscellaneous System settings* from the list of *System* options.
 . In the *REMOTE_HOST_HEADERS* field, enter the following values:
 +
 ----
