--- a/downstream/modules/platform/proc-controller-github-team-settings.adoc
+++ b/downstream/modules/platform/proc-controller-github-team-settings.adoc
@@ -12,7 +12,7 @@ The OAuth2 key (Client ID) and secret (Client Secret) are used to supply the req
 .Procedure
 . Find the numeric team ID using the link:https://fabian-kostadinov.github.io/2015/01/16/how-to-find-a-github-team-id/[GitHub API].
 The Team ID is used to supply a required field in the UI.
-. On the navigation panel, select {MenuAEAdminSettings}.
+. From the navigation panel, select {MenuAEAdminSettings}.
 . On the *Settings* page, select *GitHub settings* from the list of *Authentication* options.
 . Click the *GitHub Team* tab.
 +
