--- a/downstream/modules/platform/proc-controller-reset-tower-base.adoc
+++ b/downstream/modules/platform/proc-controller-reset-tower-base.adoc
@@ -16,5 +16,5 @@ Use the following procedure to reset `TOWER_URL_BASE` if the wrong address has b
 . Select *Miscellaneous System settings* from the *System* options.
 . Click btn:[Edit].
 . Enter the address in the *Base URL of the service* field for the DNS entry you wish to appear in notifications.
-//[ddacosta] Subscription is not an option fromt he Settings menu in my test environment. Need to verify where this lives and if it changes for 2.5
+//[ddacosta] Subscription is not an option from the Settings menu in the controller test environment. Need to verify where this lives and if it changes for 2.5
 . Re-add your license in menu:Settings[Subscription settings].
