AAP-23715 - implement peer review fixes to Automation Controller User Guide

--- a/downstream/modules/eda/proc-eda-set-up-new-decision-environment.adoc
+++ b/downstream/modules/eda/proc-eda-set-up-new-decision-environment.adoc
@@ -14,7 +14,7 @@ For more information, see the xref:eda-set-up-credential[Setting up credentials]
 .Procedure
 // ddacosta I'm not sure whether there will be an EDA specific dashboard in the gateway. Step 1 might need to change to something like "Log in to AAP".
 . Navigate to the {EDAcontroller} Dashboard.
-. From the navigation panel, select *{MenuADDecisionEnvironments}*.
+. From the navigation panel, select {MenuADDecisionEnvironments}.
 . Insert the following:
 +
 Name:: Insert the name.
