--- a/downstream/modules/eda/proc-eda-set-up-rulebook-activation.adoc
+++ b/downstream/modules/eda/proc-eda-set-up-rulebook-activation.adoc
@@ -12,7 +12,7 @@
 .Procedure
 // [ddacosta] I'm not sure whether there will be an EDA specific dashboard in the gateway. Step 1 might need to change to something like "Log in to AAP".
 . Navigate to the {EDAcontroller} Dashboard.
-. From the navigation panel, select *{MenuADRulebookActivations}*.
+. From the navigation panel, select {MenuADRulebookActivations}.
 . Insert the following:
 +
 Name:: Insert the name.
