--- a/downstream/modules/platform/proc-controller-create-application.adoc
+++ b/downstream/modules/platform/proc-controller-create-application.adoc
@@ -10,7 +10,7 @@ Creating an application with the Authorization Code grant type is the preferred 
 For example, revoking all tokens associated with that application.
 
 .Procedure
-. From the navigation panel, select {MenuAEAdminOauthApps}
+. From the navigation panel, select {MenuAEAdminOauthApps}.
 . Click btn:[Add].
 The *Create New Application* page opens.
 +
