--- a/downstream/modules/platform/proc-controller-configure-usability-analytics.adoc
+++ b/downstream/modules/platform/proc-controller-configure-usability-analytics.adoc
@@ -7,7 +7,8 @@ Usability data collection is included with {ControllerName} to collect data to u
 Only users installing a trial of {PlatformName} or a fresh installation of {ControllerName} are opted-in for this data collection.
 
 {ControllerNameStart} collects user data automatically to help improve the product.
-You can opt out or control the way {ControllerName} collects data by setting your participation level in the *User Interface settings* in the *Settings* menu.
+//[ddacosta]Modified this sentence since the procedure explains how to get to the UI settings.
+You can opt out or control the way {ControllerName} collects data by setting your participation level in the *User Interface settings*.
 
 .Procedure
 
