AAP-23715 Added missing word found during peer review

--- a/downstream/modules/hub/proc-pull-image.adoc
+++ b/downstream/modules/hub/proc-pull-image.adoc
@@ -12,7 +12,7 @@ You can pull images from the {HubName} container registry to make a copy to your
 
 .Procedure
 
-. If are pulling container images from a password or token-protected registry, xref:proc-create-credential[create a credential in {ControllerName}] before pulling the image.
+. If you are pulling container images from a password or token-protected registry, xref:proc-create-credential[create a credential in {ControllerName}] before pulling the image.
 . From the navigation panel, select {MenuACExecEnvironments}.
 . Select your container repository.
 . In the *Pull this image* entry, click btn:[Copy to clipboard].
