AAP-23715 implementing peer review fixes for Job Explorer

--- a/downstream/modules/analytics/proc-view-failed-jobs-detail.adoc
+++ b/downstream/modules/analytics/proc-view-failed-jobs-detail.adoc
@@ -19,7 +19,7 @@ You will redirected to the *Job Explorer* view, which will present a list of suc
 
 To view only failed jobs:
 
-. Click the *Filter by* drop-down menu and select *Status*.
+. Select *Status* from the *Filter by* list.
 . Select the *Failed* filter.
 
 The view will update to show only failed jobs run on that day.
