Update menu options for 2.4
Corrections

Controller User Guide UI updates chapters 24-33

https://issues.redhat.com/browse/AAP-23674

--- a/downstream/modules/platform/proc-controller-create-instance-group.adoc
+++ b/downstream/modules/platform/proc-controller-create-instance-group.adoc
@@ -7,7 +7,7 @@ Use the following procedure to create a new instance group.
 .Procedure
 
 . From the navigation panel, select menu:Administration[Instance Groups].
-. Click menu:Add[Add instance group].
+. Select *Add instance group* from the *Add* list.
 . Enter the appropriate details into the following fields:
 
 * *Name*: Names must be unique and must not be named "controller".
