--- a/downstream/modules/platform/proc-controller-set-up-github-webhook.adoc
+++ b/downstream/modules/platform/proc-controller-set-up-github-webhook.adoc
@@ -9,8 +9,8 @@ If you do not need {ControllerName} to post job statuses back to the webhook ser
 .Procedure
 
 . Generate a _Personal Access Token_ (PAT) for use with {ControllerName}:
-.. In the profile settings of your GitHub account, select *Settings*.
-.. From the navigation panel, select menu:<> Developer Settings[].
+.. In the profile settings of your GitHub account, select menu:Settings[].
+.. From the navigation panel, select menu:Developer Settings[].
 .. On the *Developer Settings* page, select *Personal access tokens*.
 .. From the *Personal access tokens* screen, click btn:[Generate a personal access token].
 .. When prompted, enter your GitHub account password to continue.
