AAP-20540 - added missing hub attribute

--- a/downstream/attributes/attributes.adoc
+++ b/downstream/attributes/attributes.adoc
@@ -216,6 +216,7 @@
 :MenuACAdminTasks: menu:Task Management[]
 :MenuACAdminCollectionApproval: menu:Collections[Approval]
 :MenuACAdminRemotes: menu:Collections[Remotes]
+:MenuACAPIToken: menu:Collections[API token]
 //Each of the services previously had selections for access which will be centralized, ultimately these should be changed to use the attributes in Access Management menu selections once automation hub is provide in the full ui platform experience in 2.5-next
 :MenuHubUsers: menu:User Access[Users]
 :MenuHubGroups: menu:User Access[Groups]
