--- a/downstream/modules/platform/proc-scm-git-subversion.adoc
+++ b/downstream/modules/platform/proc-scm-git-subversion.adoc
@@ -3,9 +3,9 @@
 = SCM Types - Configuring playbooks to use Git and Subversion
 
 .Procedure
-. In the Project *Details* tab, select the appropriate option (Git or Subversion) from the *SCM Type* menu.
+. In the project *Details* tab, select the appropriate option (Git or Subversion) from the *Source Control Type* menu.
 +
-image:projects-create-scm-project.png[Select scm]
+//image:projects-create-scm-project.png[Select scm]
 
 . Enter the appropriate details into the following fields:
 
@@ -29,7 +29,7 @@ In addition, to avoid job overflows if jobs are spawned faster than the project 
 For more information, see xref:controller-job-branch-overriding[Job branch overriding].
 +
 image:projects-create-scm-project-branch-override-checked.png[Override options]
-. Click *Save* to save your project.
+. Click *Save project* to save your project.
 
 [TIP]
 ====
