--- a/downstream/modules/platform/proc-scm-insights.adoc
+++ b/downstream/modules/platform/proc-scm-insights.adoc
@@ -3,9 +3,9 @@
 = SCM Type - Configuring playbooks to use Red Hat Insights
 
 .Procedure
-. In the  Project *Details* page, select *Red Hat Insights* from the *SCM Type* menu.
+. In the project *Details* page, select *Red Hat Insights* from the *Source Control Type* menu.
 . In the *Credential* field, select the appropriate credential for use with Insights, as Red Hat Insights requires a credential for authentication. 
-. Optional: In the *SCM Update Options* field, select the launch behavior, if applicable.
+. Optional: In the *Options* field, select the launch behavior, if applicable:
 
 * *Clean* - Removes any local modifications before performing an update.
 * *Delete* - Deletes the local repository in its entirety before performing an update. 
