--- a/downstream/modules/platform/proc-scm-insights.adoc
+++ b/downstream/modules/platform/proc-scm-insights.adoc
@@ -17,6 +17,6 @@ roles directory from xref:ref-projects-galaxy-support[{Galaxy} support] or xref:
 If jobs are spawned faster than the project can synchronize, selecting this enables you to configure a Cache Timeout to
 cache previous project synchronizations for a certain number of seconds, to avoid job overflow.
 +
-image:projects-create-scm-insights.png[SCM insights]
+//image:projects-create-scm-insights.png[SCM insights]
 
-. Click btn:[Save].
+. Click btn:[Create project].
