Update Controller UG with 2.5 attributes
Correcting procedures to match 2.5 UI

Controller User Guide UI updates chapters 24-33

https://issues.redhat.com/browse/AAP-23674

--- a/downstream/modules/platform/con-controller-inventory-sync-jobs.adoc
+++ b/downstream/modules/platform/con-controller-inventory-sync-jobs.adoc
@@ -3,6 +3,9 @@
 = Inventory sync jobs
 
 When an inventory synchronization is executed, the results display in the *Output* tab. 
+
+For more information on inventory synchronization, see xref:ref-controller-constructed-inventories[Constructed inventories].
+
 If used, the Ansible CLI displays the same information. 
 This can be useful for debugging.
 The `ANSIBLE_DISPLAY_ARGS_TO_STDOUT` parameter is set to `False` for all playbook runs. 
