--- a/downstream/modules/platform/proc-controller-create-custom-notifications.adoc
+++ b/downstream/modules/platform/proc-controller-create-custom-notifications.adoc
@@ -6,7 +6,8 @@ You can xref:controller-attributes-custom-notifications[customize the text conte
 
 .Procedure
 
-. On the *Notification Templates* list view click btn:[Add].
+. From the navigation panel, select {MenuAEAdminJobNotifications}.
+. Click btn:[Add notifier].
 . Choose a notification type from the *Type* list.
 . Enable *Customize messages* using the toggle.
 +
