--- a/downstream/assemblies/platform/assembly-ug-controller-instance-groups.adoc
+++ b/downstream/assemblies/platform/assembly-ug-controller-instance-groups.adoc
@@ -6,7 +6,7 @@ An Instance Group enables you to group instances in a clustered environment.
 Policies dictate how instance groups behave and how jobs are executed. 
 The following view displays the capacity levels based on policy algorithms:
 
-image::ug-instance-groups_list_view.png[Instance groups list view]
+//image::ug-instance-groups_list_view.png[Instance groups list view]
 
 .Additional resources
 
