--- a/downstream/modules/platform/proc-controller-associate-instances-to-instance-group.adoc
+++ b/downstream/modules/platform/proc-controller-associate-instances-to-instance-group.adoc
@@ -5,14 +5,14 @@
 .Procedure
 
 . Select the *Instances* tab of the *Instance Groups* window.
-. Click btn:[Associate].
-. Click the checkbox next to one or more available instances from the list to select the instances you want to associate with the instance group:
-+
-image::instance-group-assoc-instances.png[Associate instances]
-+
-. In the following example, the instances added to the instance group displays along with information about their capacity:
-+
+. Click btn:[Associate instance].
+. Click the checkbox next to one or more available instances from the list to select the instances you want to associate with the instance group and click btn:[Confirm]
+//+
+//image::instance-group-assoc-instances.png[Associate instances]
+//+
+//. In the following example, the instances added to the instance group displays along with information about their capacity:
+//+
 
-image::ug-instances-example-callouts.png[Instances callouts]
+//image::ug-instances-example-callouts.png[Instances callouts]
 
 
