--- a/downstream/modules/platform/proc-aap-migration-backup.adoc
+++ b/downstream/modules/platform/proc-aap-migration-backup.adoc
@@ -14,14 +14,15 @@ To migrate {PlatformNameShort} deployment to {OperatorPlatform}, you must have t
 
 [NOTE]
 ====
-You can store the secret key information in the inventory file before the initial {PlatformName} installation. If you are unable to remember your secret key or have trouble locating your inventory file, contact link:https://access.redhat.com/[Ansible support] through the Red Hat Customer portal.
+You can store the secret key information in the inventory file before the initial {PlatformName} installation. 
+If you are unable to remember your secret key or have trouble locating your inventory file, contact link:https://access.redhat.com/[Ansible support] through the Red Hat Customer portal.
 ====
 
 Before migrating your data from {PlatformNameShort} 2.x or earlier, you must back up your data for loss prevention. To backup your data, do the following:
 
 .Procedure
 . Log in to your current deployment project.
-. Run setup.sh to create a backup of your current data or deployment:
+. Run `setup.sh` to create a backup of your current data or deployment:
 +
 For on-prem deployments of version 2.x or earlier:
 +
