Add notes about use of local users
Documentation should clarify if local users are needed

https://issues.redhat.com/browse/AAP-19240

--- a/downstream/modules/platform/con-controller-secret-handling.adoc
+++ b/downstream/modules/platform/con-controller-secret-handling.adoc
@@ -8,6 +8,11 @@
 * Secrets for {ControllerName} operational use, such as database password or message bus password.
 * Secrets for automation use, such as SSH keys, cloud credentials, or external password vault credentials.
 
+[NOTE]
+====
+To configure PostgreSQL or run {ControllerName} you must have a 'local' user. Using an LDAP user fails because the local user account is used to configure access for the LDAP user, but only after you are able to log in to {ControllerName}.
+====
+
 == User passwords for local users
 
 {ControllerNameStart} hashes local {ControllerName} user passwords with the PBKDF2 algorithm using a SHA256 hash. 
