--- a/downstream/assemblies/platform/assembly-ag-controller-secret-handling.adoc
+++ b/downstream/assemblies/platform/assembly-ag-controller-secret-handling.adoc
@@ -12,6 +12,11 @@ include::platform/ref-controller-secret-handling-automation-use.adoc[leveloffset
 
 {ControllerNameStart} allows for connections to internal services, external access, and managed nodes.
 
+[NOTE]
+====
+To configure PostgreSQL or run {ControllerName} you must have a 'local' user. Using an LDAP user fails because the local user account is used to configure access for the LDAP user, but only after you are able to log in to {ControllerName}
+====
+
 include::platform/ref-controller-internal-services.adoc[leveloffset=+2]
 include::platform/ref-controller-external-access.adoc[leveloffset=+2]
 include::platform/ref-controller-managed-nodes.adoc[leveloffset=+2]
