--- a/downstream/modules/platform/proc-controller-adding-gpg-key.adoc
+++ b/downstream/modules/platform/proc-controller-adding-gpg-key.adoc
@@ -29,7 +29,7 @@ synchronizations.
 ====
 Use the project cache SCM timeout to control how often you want {ControllerName} to re-validate the signed content.
 When a project is configured to update on launch (of any job template configured to use that project), you can enable the cache timeout setting, which sets it to update after `N` seconds have passed since the last update.
-If validation is running too often, you can slow down how often project updates occur by specifying the time in the *Cache Timeout* field of the *Options* pane of the project.
+If validation is running too often, you can slow down how often project updates occur by specifying the time in the *Cache Timeout* field of the *Options Details* view of the project.
 
-//image:project-update-launch-cache-timeout.png[image]
+image:project-update-launch-cache-timeout.png[Project Cache Timeout option]
 ====
