--- a/downstream/modules/platform/proc-controller-delete-job-template.adoc
+++ b/downstream/modules/platform/proc-controller-delete-job-template.adoc
@@ -7,8 +7,8 @@ Before deleting a job template, ensure that it is not used in a workflow job tem
 .Procedure
 
 . Delete a job template by using one of these methods:
-* Select the checkbox next to one or more job templates and click btn:[Delete].
-* Click the desired job template and click btn:[Delete], on the *Details* page.
+* Select the checkbox next to one or more job templates. Click image:options_menu.png[options menu,15,15] and select btn:[Delete template].
+* Select the required job template and click btn:[Delete], on the *Details* page.
 
 [NOTE]
 ====
