--- a/downstream/modules/platform/proc-controller-enable-provision-callbacks.adoc
+++ b/downstream/modules/platform/proc-controller-enable-provision-callbacks.adoc
@@ -4,14 +4,14 @@
 
 .Procedure
 
-* To enable callbacks, check the *Provisioning Callbacks* checkbox in the job template.
-This displays *Provisioning Callback URL* for the job template.
+* To enable callbacks, check the *Provisioning callback* option in the job template.
+This displays *Provisioning callback details* for the job template.
 +
 [NOTE]
 ====
 If you intend to use {ControllerName}'s provisioning callback feature with a dynamic inventory, set *Update on Launch* for the inventory group used in the job template.
 
-image::ug-provisioning-callbacks-config.png[Provisioning Callback details]
+//image::ug-provisioning-callbacks-config.png[Provisioning Callback details]
 ====
 
 Callbacks also require a Host Config Key, to ensure that foreign hosts with the URL cannot request configuration. 
