--- a/downstream/modules/platform/con-controller-secret-handling.adoc
+++ b/downstream/modules/platform/con-controller-secret-handling.adoc
@@ -10,7 +10,17 @@
 
 [NOTE]
 ====
-To configure PostgreSQL or run {ControllerName} you must have a 'local' user. Using an LDAP user fails because the local user account is used to configure access for the LDAP user, but only after you are able to log in to {ControllerName}.
+You must have a 'local' user access to configure any of the following:
+
+* PostgreSQL
+* AWX
+* redis
+* receptor
+* nginx 
+* {ControllerName}
+* LDAP
+
+The local user account is used to configure access, but only after you are able to log in to {ControllerName}
 ====
 
 == User passwords for local users
