Update controller with 2.5 attributes
More updates

Controller User Guide UI updates chapters 24-33

https://issues.redhat.com/browse/AAP-23674

--- a/downstream/modules/platform/proc-controller-create-instance-group.adoc
+++ b/downstream/modules/platform/proc-controller-create-instance-group.adoc
@@ -35,4 +35,4 @@ When you have successfully created the instance group the *Details* tab of the n
 
 You can also edit *Instances* and review *Jobs* associated with this instance group:
 
-//image::ug-instance-group-created.png[Instance group successfully created]
+image::ug-instance-group-created.png[Instance group successfully created]
