--- a/downstream/assemblies/platform/assembly-ug-controller-instance-groups.adoc
+++ b/downstream/assemblies/platform/assembly-ug-controller-instance-groups.adoc
@@ -6,12 +6,12 @@ An Instance Group enables you to group instances in a clustered environment.
 Policies dictate how instance groups behave and how jobs are executed. 
 The following view displays the capacity levels based on policy algorithms:
 
-//image::ug-instance-groups_list_view.png[Instance groups list view]
+image::ug-instance-groups_list_view.png[Instance groups list view]
 
 .Additional resources
 
-* For more information about the policy or rules associated with instance groups, see the link:http://docs.ansible.com/automation-controller/4.4/html/administration/containers_instance_groups.html#ag-instance-groups[Instance Groups] section of the _{ControllerAG}_.
-* For more information on connecting your instance group to a container, see link:http://docs.ansible.com/automation-controller/4.4/html/administration/containers_instance_groups.html#ag-container-groups[Container Groups].
+* For more information about the policy or rules associated with instance groups, see the link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html/automation_controller_administration_guide/controller-instance-and-container-groups[Instance Groups] section of the _{ControllerAG}_.
+* For more information on connecting your instance group to a container, see link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html/automation_controller_administration_guide/controller-instance-and-container-groups#controller-container-groups[Container Groups].
 
 include::platform/proc-controller-create-instance-group.adoc[leveloffset=+1]
 include::platform/proc-controller-associate-instances-to-instance-group.adoc[leveloffset=+2]
