Corrected links from docs.ansible.com
Controller user guide link goes to docs.ansble.com instead of access.com

https://issues.redhat.com/browse/AAP-23922

--- a/downstream/assemblies/platform/assembly-controller-organizations.adoc
+++ b/downstream/assemblies/platform/assembly-controller-organizations.adoc
@@ -32,6 +32,7 @@ Click btn:[Delete] to remove a selected organization.
 
 include::platform/proc-controller-create-organization.adoc[leveloffset=+1]
 include::platform/con-controller-access-organizations.adoc[leveloffset=+1]
-
+include::platform/proc-controller-add-organization-user.adoc[leveloffset=+2]
+include::platform/ref-controller-organization-notifications.adoc[leveloffset=+2]
 endif::controller-UG[]
 
