--- a/downstream/assemblies/platform/assembly-controller-teams.adoc
+++ b/downstream/assemblies/platform/assembly-controller-teams.adoc
@@ -19,6 +19,9 @@ Click the Edit image:leftpencil.png[Edit,15,15] icon next to the entry to edit i
 You can also review *Users* and *Permissions* associated with this team.
 
 include::platform/proc-controller-creating-a-team.adoc[leveloffset=+1]
+include::platform/ref-controller-team-access.adoc[leveloffset=+2]
+include::platform/ref-controller-team-roles.adoc[leveloffset=+2]
+include::platform/proc-controller-team-add-permissions.adoc[leveloffset=+2]
 
 ifdef::parent-context[:context: {parent-context}]
 ifndef::parent-context[:!context:]
