--- a/downstream/modules/platform/con-controller-access-organizations.adoc
+++ b/downstream/modules/platform/con-controller-access-organizations.adoc
@@ -13,12 +13,9 @@ Use this page to complete the following tasks:
 Click btn:[Users] on the navigation panel to manage user membership on a per-user basis from the *Users* page. 
 * Assign specific users certain levels of permissions within your organization.
 * Enable them to act as an administrator for a particular resource. 
-For more information, see link:https://docs.ansible.com/automation-controller/latest/html/userguide/security.html#rbac-ug[Role-Based Access Controls].
+For more information, see xref:con-controller-rbac[Role-Based Access Controls].
 
 Click a user to display that user's details.
 You can review, grant, edit, and remove associated permissions for that user.
 For more information, see xref:assembly-controller-users[Users].
-
-include::proc-controller-add-organization-user.adoc[leveloffset=+1]
-include::ref-controller-organization-notifications.adoc[leveloffset=+1]
 
