--- a/downstream/modules/platform/proc-controller-create-application.adoc
+++ b/downstream/modules/platform/proc-controller-create-application.adoc
@@ -22,7 +22,7 @@ image:apps-create-new.png[Create application]
 * Optional: *Description*: give a short description for your application
 * *Organization* (required): give an organization with which this application is associated
 * *Authorization Grant Type* (required): select one of the grant types to use for the user to get tokens for this application.
-For more information, see link:https://docs.ansible.com/automation-controller/4.4/html/administration/oauth2_token_auth.html#ag-oauth2-token-auth-grant-types[Application Functions] in the Applications section of the _{ControllerAG}_.
+For more information, see link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html/automation_controller_administration_guide/assembly-controller-token-based-authentication#ref-controller-application-functions[Application Functions] in the Applications section of the _{ControllerAG}_.
 * *Redirect URIS*: give a list of allowed URIs, separated by spaces.
 You need this if you specified the grant type to be *Authorization code*.
 * *Client Type* (required): select the level of security of the client device.
