--- a/downstream/modules/platform/proc-controller-apps-create-tokens.adoc
+++ b/downstream/modules/platform/proc-controller-apps-create-tokens.adoc
@@ -47,4 +47,4 @@ image:apps-tokens-list-view-example2.png[image]
 .Additional resources
 
 If you are a system administrator and have to create or remove tokens for other users, see the revoke and create commands in the
-link:https://docs.ansible.com/automation-controller/4.4/html/administration/tower-manage.html#ag-token-utility[Token and session management] section of the _{ControllerAG}_.
+link:{BaseURL}/red_hat_ansible_automation_platform/{PlatfromVers}/html/automation_controller_administration_guide/assembly-controller-awx-manage-utility#ref-controller-token-session-management[Token and session management] section of the _{ControllerAG}_.
