--- a/downstream/modules/platform/proc-controller-pass-extra-variables-provisioning-callbacks.adoc
+++ b/downstream/modules/platform/proc-controller-pass-extra-variables-provisioning-callbacks.adoc
@@ -22,4 +22,4 @@ root@localhost:~$ curl -f -H 'Content-Type: application/json' -XPOST \
 https://<CONTROLLER_SERVER_NAME>/api/v2/job_templates/7/callback
 ----
 
-For more information, see link:https://docs.ansible.com/automation-controller/4.4/html/administration/tipsandtricks.html#launch-jobs-curl[Launching Jobs with Curl] in the _{ControllerAG}_.
+For more information, see link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html/automation_controller_administration_guide/controller-tips-and-tricks#ref-controller-launch-jobs-with-curl[Launching Jobs with Curl] in the _{ControllerAG}_.
