--- a/downstream/modules/platform/proc-controller-user-tokens.adoc
+++ b/downstream/modules/platform/proc-controller-user-tokens.adoc
@@ -4,8 +4,7 @@
 
 The *Tokens* tab is only present for the user you created for yourself. 
 
-Before you add a token for your user, you might want to link:https://docs.ansible.com/automation-controller/latest/html/userguide/applications_auth.html#ug-applications-auth-create[Create an application] if you want to
-associate your token with it. 
+Before you add a token for your user, you might want to link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html/automation_controller_user_guide/assembly-controller-applications#proc-controller-create-application[Create an application] if you want to associate your token with it. 
 
 You can also create a _Personal Access Token_ (PAT) without associating it with any application. 
 
