--- a/downstream/modules/platform/ref-controller-credential-openShift.adoc
+++ b/downstream/modules/platform/ref-controller-credential-openShift.adoc
@@ -4,7 +4,7 @@
 
 Select this credential type to create instance groups that point to a Kubernetes or OpenShift container. 
 
-For more information, see link:https://docs.ansible.com/automation-controller/4.4/html/administration/containers_instance_groups.html#ag-ext-exe-env[Container and Instance Groups] in the _{ControllerAG}_.
+For more information, see link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html/automation_controller_administration_guide/controller-instance-and-container-groups[Container and Instance Groups] in the _{ControllerAG}_.
 
 //image:credentials-create-containers-credential.png[Credentials- create Containers credential]
 
