--- a/downstream/modules/platform/proc-controller-adding-new-inventory.adoc
+++ b/downstream/modules/platform/proc-controller-adding-new-inventory.adoc
@@ -52,8 +52,8 @@ support instances. Most users do not need to see debug mode output.
 You can paste a group name into the limit field to only include hosts in that group.
 For more information, see the *Source vars* setting.
 * Only applicable to standard inventories: *Options*: Check the *Prevent Instance Group Fallback* option to enable only the instance groups listed in the *Instance Groups* field to execute the job.
-If unchecked, all available instances in the execution pool will be used based on the hierarchy described in
-link:https://docs.ansible.com/automation-controller/4.4/html/administration/containers_instance_groups.html#ag-instance-groups-control-where-job-runs[Control where a job runs] in the _{ControllerAG}_.
+If unchecked, all available instances in the execution pool are used based on the hierarchy described in
+link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html-single/automation_controller_administration_guide/index#controller-control-job-run[Control where a job runs] in the _{ControllerAG}_.
 Click the image:question_circle.png[Help,15,15] icon for additional information.
 +
 //[NOTE]
