--- a/downstream/modules/platform/proc-projects-using-collections-with-hub.adoc
+++ b/downstream/modules/platform/proc-projects-using-collections-with-hub.adoc
@@ -80,7 +80,7 @@ In cases where you have a large project (around 10 GB), disk space on `/tmp` may
 
 .Additional resources
 
-For more information about collections, see link:https://docs.ansible.com/ansible/latest/user_guide/collections_using.html[Using Collections]. 
+For more information about collections, see link:https://docs.ansible.com/ansible/latest/user_guide/collections_using.html[Using Ansible Collections]. 
 
 For more information about how Red Hat publishes one of these official collections, which can be used to automate your
 install directly, see the link:https://github.com/ansible/awx/blob/devel/awx_collection/README.md[AWX Ansible Collection] documentation. 
