--- a/downstream/assemblies/platform/assembly-ug-controller-instance-groups.adoc
+++ b/downstream/assemblies/platform/assembly-ug-controller-instance-groups.adoc
@@ -10,7 +10,7 @@ image::ug-instance-groups_list_view.png[Instance groups list view]
 
 .Additional resources
 
-* For more information about the policy or rules associated with instance groups, see the link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html/automation_controller_administration_guide/controller-instance-and-container-groups[Instance Groups] section of the _{ControllerAG}_.
+* For more information about the policy or rules associated with instance groups, see the link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html/automation_controller_administration_guide/controller-instance-and-container-groups#controller-instance-groups[Instance Groups] section of the _{ControllerAG}_.
 * For more information on connecting your instance group to a container, see link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html/automation_controller_administration_guide/controller-instance-and-container-groups#controller-container-groups[Container Groups].
 
 include::platform/proc-controller-create-instance-group.adoc[leveloffset=+1]
