--- a/downstream/modules/platform/proc-controller-view-jobs-associated-with-instance-group.adoc
+++ b/downstream/modules/platform/proc-controller-view-jobs-associated-with-instance-group.adoc
@@ -17,4 +17,4 @@ Each job displays the following details:
 
 .Additional resources
 The instances are run in accordance with instance group policies.
-For more information, see link:https://access.redhat.com/documentation/en-us/red_hat_ansible_automation_platform/2.4/html/automation_controller_administration_guide/controller-instance-and-container-groups#controller-instance-group-policies[Instance Group Policies] in the _{ControllerAG}_.
+For more information, see link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html/automation_controller_administration_guide/controller-instance-and-container-groups#controller-instance-group-policies[Instance Group Policies] in the _{ControllerAG}_.
