Update Controller UG with 2.5 attributes
Corrected more modules and assemblies

Controller User Guide UI updates chapters 24-33

https://issues.redhat.com/browse/AAP-23674

--- a/downstream/modules/platform/proc-controller-create-insights-project.adoc
+++ b/downstream/modules/platform/proc-controller-create-insights-project.adoc
@@ -7,7 +7,7 @@ Use the following steps to create a new project for use with Red Hat Insights:
 .Procedure
 
 . From the navigation panel, select {MenuAEProjects}.
-. Click btn:[Add].
+. Click btn:[Create project].
 . Enter the appropriate details in the following fields.
 Note that the following fields require specific Red Hat Insights related entries:
 
