--- a/downstream/assemblies/platform/assembly-ug-controller-schedules.adoc
+++ b/downstream/assemblies/platform/assembly-ug-controller-schedules.adoc
@@ -11,8 +11,8 @@ Click the Edit image:leftpencil.png[Edit,15,15] icon to edit a schedule.
 
 image::ug-schedules-sample-list.png[Schedules sample list]
 
-If you are setting up a template, a project, or an inventory source, click the *Schedules* tab to configure schedules for these resources.
-When you create a schedule, they are listed by the following:
+If you are setting up a template, a project, or an inventory source, click the *Schedules* tab on the *Details* page for that resource, to configure schedules for these resources.
+When you create a schedule, it has the following parameters:
 
 Name:: Click the schedule name to open its details.
 Related resource:: Describes the function of the schedule.
@@ -20,3 +20,4 @@ Type:: This identifies whether the schedule is associated with a source control 
 Next run:: The next scheduled run of this task.
 
 include::platform/proc-controller-adding-new-schedule.adoc[leveloffset=+1]
+include::platform/proc-controller-define-schedule-rules.adoc[leveloffset=+1]
