Update Controller UG with 2.5 attributes
Corrections

Controller User Guide UI updates chapters 24-33

https://issues.redhat.com/browse/AAP-23674

--- a/downstream/modules/platform/proc-controller-adding-new-schedule.adoc
+++ b/downstream/modules/platform/proc-controller-adding-new-schedule.adoc
@@ -14,7 +14,7 @@ To create a new schedule on the *Schedules* page:
 image::ug-generic-create-schedule.png[Create schedule]
 +
 
-To create a new schedule from a resource page
+To create a new schedule from a resource page:
 
 .Procedure
 . Click the *Schedules* tab of the resource that you are configuring.
