Add information about format of FQDN
To 2.3

[Cee.neXT] Missing information on the FQDN and the skeope working.

https://issues.redhat.com/browse/AAP-24164

--- a/downstream/modules/platform/con-install-scenario-examples.adoc
+++ b/downstream/modules/platform/con-install-scenario-examples.adoc
@@ -14,7 +14,10 @@ The database host set to be installed needs to be a unique host.
 * Do not install {ControllerName} and {HubName} on the same node for versions of {PlatformNameShort} in a production or customer environment.
 This can cause contention issues and heavy resource use.
 * Provide a reachable IP address or fully qualified domain name (FQDN) for the `[automationhub]` and `[automationcontroller]` hosts to ensure users can sync and install content from {HubName} from a different node. 
-Do not use 'localhost'.
++
+The FQDN must not contain either the `-` or the `_` symbols, as it will not be processed correctly.
++
+Do not use `localhost`.
 * Do not use special characters for `pg_password`. It can cause the setup to fail.
 * Enter your Red Hat Registry Service Account credentials in `registry_username` and `registry_password` to link to the Red Hat container registry.
 * The inventory file variables `registry_username` and `registry_password` are only required if a non-bundle installer is used.
