Adding modules for planning Assembly (AAP-23356)

--- a/stories/assembly-saas-planning.adoc
+++ b/stories/assembly-saas-planning.adoc
@@ -1,6 +1,11 @@
 ifdef::context[:parent-context: {context}]
 
 [id="saas-planning"]
-= Planning your {SaaSonAWS}
+= Planning for {SaaSonAWS}
+Before setting up your {SaaSonAWS} review the following sections for a comprehensive understanding of the required configurations to plan your deployment effectively. 
 
+
+include::topics/con-saas-intro.adoc[leveloffset=+1]
+include::topics/ref-saas-default-configs.adoc[leveloffset=+1]
+include::topics/ref-saas-planning-configs.adoc[leveloffset=+1]
 :context: saas-planning
