Peer review edits

--- a/downstream/modules/platform/con-controller-overview-details.adoc
+++ b/downstream/modules/platform/con-controller-overview-details.adoc
@@ -1,15 +1,15 @@
 [id="con-controller-overview-details"]
 
 = Real-time playbook output and exploration
-With {ControllerNameStart} you can watch playbooks run in real time, seeing each host as they check in.
+With {ControllerName} you can watch playbooks run in real time, seeing each host as they check in.
 You can go back and explore the results for specific tasks and hosts in great detail, search for specific plays or hosts and see just those results, or locate errors that need to be corrected.
 
 = "Push Button" automation
-Use {ControllerNameStart} to access your favorite projects and re-trigger execution from the web interface.
+Use {ControllerName} to access your favorite projects and re-trigger execution from the web interface.
 {ControllerNameStart} asks for input variables, prompts for your credentials, starts and monitors jobs, and displays results and host history.
 
 = Simplified role-based access control and auditing
-With {ControllerNameStart} you can:
+With {ControllerName} you can:
 
 * Grant permissions to perform a specific task to different teams or explicit users through _role-based access control_ (RBAC).
 Example tasks include viewing, creating, or modifying a file.
@@ -117,7 +117,7 @@ Run time management of cluster groups enables configurable scaling.
 To model your complex provisioning, deployment, and orchestration workflows, you can use {ControllerName} expanded workflows in several ways:
 
 * *Inventory overrides for Workflows* You can override an inventory across a workflow at workflow definition time, or at launch time.
-Use {ControllerNameStart} to define your application deployment workflows, and then re-use them in many environments.
+Use {ControllerName} to define your application deployment workflows, and then re-use them in many environments.
 * *Convergence nodes for Workflows* When modeling complex processes, you must sometimes wait for many steps to finish before proceeding.
 {ControllerNameStart} workflows can replicate this; workflow steps can wait for any number of earlier workflow steps to complete properly before proceeding.
 * *Workflow Nesting* You can re-use individual workflows as components of a larger workflow.
