--- a/downstream/modules/platform/ref-controller-search-tips.adoc
+++ b/downstream/modules/platform/ref-controller-search-tips.adoc
@@ -5,7 +5,7 @@
 These searching tips assume that you are not searching hosts. 
 //Most of this section still applies to hosts but with some subtle differences. 
 
-* The typical syntax of a search consists of a field (left side) and a value (right side). 
+* The typical syntax of a search consists of a field, followed by a value. 
 * A colon is used to separate the field that you want to search from the value. 
 * If the search has no colon (see example 3) it is treated as a simple string search where `?search=foobar` is sent. 
 
