update based on peer review feedback

--- a/downstream/modules/troubleshooting-aap/proc-troubleshoot-invalid-credentials.adoc
+++ b/downstream/modules/troubleshooting-aap/proc-troubleshoot-invalid-credentials.adoc
@@ -19,7 +19,7 @@ The default value is `-1`, which disables the maximum sessions allowed. This mea
 
 .Verification
 
-* Verify you can log in successfully to {ControllerName}.
+* Verify that you can log in successfully to {ControllerName}.
 
 
 [role="_additional-resources"]
