--- a/downstream/modules/troubleshooting-aap/proc-troubleshoot-job-pending.adoc
+++ b/downstream/modules/troubleshooting-aap/proc-troubleshoot-job-pending.adoc
@@ -29,7 +29,7 @@ There are a few reasons jobs can become stuck in a pending state. For more infor
 
 *Cancel a single job by using a job id*
 
-* To cancel a specific job, use the following commands, replacing `_<job_id>_` with the job id to cancel:
+* To cancel a specific job, run the following commands, replacing `_<job_id>_` with the job id to cancel:
 +
 [subs="+quotes"]
 ----
