--- a/downstream/modules/troubleshooting-aap/proc-troubleshoot-use-in-controller.adoc
+++ b/downstream/modules/troubleshooting-aap/proc-troubleshoot-use-in-controller.adoc
@@ -46,7 +46,7 @@ CONNECTED_ANSIBLE_CONTROLLERS = ['_<https://my.controller.node1>_', '_<https://m
 
 
 .Verification
-* Verify you can now use the *Use in Controller* option in {PrivateHubName}.
+* Verify that you can now use the *Use in Controller* option in {PrivateHubName}.
 
 
 
